<resources>
    <string name="app_name">Ensilink</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="news">Actualité</string>

    <string name="club_logo">Logo du club</string>
    <string name="event_image">Image de l\'évènement</string>
    <string name="attribution_logo">Logo creative commons</string>
    <string name="position_logo">Logo de pour le développeur</string>

...
    <string name="clubs">Clubs</string>
    <string name="emails">Mails</string>
    <string name="information">Informations</string>

    <string name="union_photo_description">Photo de groupe du bureau</string>

    <string name="credits">Crédits</string>
    <string name="developers">Développeurs</string>
    <string name="manager">Chef de projet</string>
    <string name="developer">Développeur</string>
    <string-array name="team_2016_2017">
        <item name="leader">Florian ARNOULD</item>
        <item name="developer_1">Jérémy FILIPOZZI</item>
...
    </string-array>
    <string name="attributions">Artistes du site The Noun Project</string>
    <string name="application_icon"><i>Kangaroo</i> by Yi Chen</string>
    <string name="manager_icon"><i>management</i> by Gregor Črešnar</string>
    <string name="developer_icon"><i>Mobile Development</i> by ProSymbols</string>

    <string name="login">Connexion</string>
    <string name="logout">Deconnexion</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>

    <string name="settings">Paramètres</string>
    <string name="parameters">Paramètres</string>

    <string name="error">Erreur</string>
    <string name="wrong_email_address_message">Email de l\'ENSICAEN requis</string>
    <string name="authentification_error">Une erreur est survenue lors de l\'authentification, Veuillez réessayer.</string>
    <string name="preference_file_key">"fr.ensicaen.lbssc.ensilink.preferences"</string>

    <string name="email_icon">Icone email</string>

</resources>

