<RelativeLayout
    android:id="@+id/clubs_list_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.unionscreen.ClubsFragment">

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/tab_layout_height"
        android:dividerHeight="2dp"/>

</RelativeLayout>