<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/union_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:drawablePadding="20dp"
        android:gravity="center"
        android:textColor="#737373"
        android:textSize="15sp"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.SCBSwitch"/>

</RelativeLayout>